@@ -1,5 +1,9 @@
 2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>
 
+	* Sybase.py: Corrected test test_ExceptionsAsConnectionAttributes
+	- Added Exceptions as attributes of Connection based on patch by
+	Greg Ward
+
 	* Sybase.py: Corrected test test_non_existing_proc - Raising
 	StoredProcedureError when calling a non-existing stored procedure
 
